--- a/Monday_OOP_Inclass_Lecture-Completed.ipynb
+++ b/Monday_OOP_Inclass_Lecture-Completed.ipynb
@@ -950,7 +950,8 @@
     "    \n",
     "    def at_sleep(self,sleep)\n",
     "    \n",
-    "    def at_"
+    "    def at_play(self,play)\n",
+    "    "
    ]
   }
  ],
